TL-297: Fix padding for tout title on mobile.

--- a/themes/custom/generic_microsite/less/style.less
+++ b/themes/custom/generic_microsite/less/style.less
@@ -599,13 +599,13 @@ body,
   position: fixed;
   top: 0;
   right: 0;
+  z-index: 100;
+  display: none;
   width: 300px;
   height: 100%;
   overflow: auto;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
-  visibility: hidden;
-  z-index: 100;
 }
 
 .st-menu::after {
@@ -655,9 +655,9 @@ body,
 }
 
 .st-effect-2.st-menu-open .st-effect-2.st-menu {
+  display: block;
   -webkit-transition: -webkit-transform 0.5s;
   transition: transform 0.5s;
-  visibility: visible;
 }
 
 .st-effect-2.st-menu::after {
@@ -1096,6 +1096,12 @@ body {
       margin-top: 15px;
       margin-bottom: 0;
     }
+    > .field--item:first-child {
+      display: none;
+      @media(min-width: @screen-sm-min) {
+        display: block;
+      }
+    }
     > div {
       padding-bottom: 15px;
       @media(max-width: @screen-sm) { 
@@ -1141,10 +1147,10 @@ body {
     .field--name-field-title {
       font-family: Arial,Helvetica,sans-serif;
       font-size: 14px;
-      padding: 15px 15px 4px 15px;
+      padding: 15px 0 4px;
       @media(min-width: @screen-sm-min) { 
-       padding-top: 5px;
-       margin-top:4px;
+       padding: 5px 15px 4px;
+       margin-top: 4px;
       }
       @media(min-width: @screen-xs-max) { 
        padding-left: 0;
@@ -1153,7 +1159,7 @@ body {
     }
     .tout-text {
       h2 {
-        font-size:18px;
+        font-size: 18px;
         margin-top: 0;
       }
       h3 {
@@ -1178,8 +1184,12 @@ body {
 .home-two-col-left-block {
   border-bottom: 1px solid #e5e5e5;
   border-top: 1px solid #e5e5e5;
+  display: block;
   padding-bottom: 7px;
   padding-top: 15px;
+  @media(min-width: @screen-sm) {
+    display: none;
+  }
 }
 
 .path-frontpage {
@@ -3827,9 +3837,6 @@ ul.sitemap-menu {
   }
   aside .tout-text h4 {
     font-weight: 400;
-  }
-  .home-two-col-left-block {
-    border: 0;
   }
 }
 
